2012-03-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCC.lex, doc/sdccman.lyx: removed asm() pseudo function
	  since it is not standard-compliant

2012-03-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCpeeph.c:
	  Handle gbz80 (hl+) and (hl-).

2012-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/Makefile.in,
	  support/regression/collate-results.py: Summarize any failures in a
	  nicer format instead of all run together on one line
	* src/ds390/gen.c (genPlusIncr): fix problem with dereferencing a
	  generic pointer via a struct losing pointer type byte

2012-03-18 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx,src/avr/gen.c, src/ds390/gen.c,
	  src/hc08/gen.c, src/mcs51/gen.c, src/pic14/gen.c,
	  src/pic16/device.c, src/pic16/gen.c, src/pic16/glue.c,
	  src/pic16/pcode.c, src/SDCC.lex, src/SDCC.y, src/SDCCast.c,
	  src/SDCCglue.c, src/SDCCsymt.h, src/SDCCutil.c,
	  src/SDCCutil.h, src/SDCCval.c:
	  implemented feature request #2815320 - please add asm()
	  pseudo function as alternate
	* sdcc.sln, src/sdcc.vcxproj, src/sdcc.vcxproj.filters,
	  src/yacc.vcxproj:
	  re-itroduced yacc project
	* .version, doc/sdccman.lyx: bumped version to 3.1.4
	* config.vcxproj, src/ds390/ds390.vcxproj,
	  src/hc08/hc08.vcxproj, src/mcs51/mcs51.vcxproj,
	  src/pic14/pic14.vcxproj, src/pic16/pic16.vcxproj,
	  src/sdcc.vcxproj, src/yacc.vcxproj, src/z80/z80.vcxproj,
	  all.vcxproj, all.vcxproj.filters:
	  VS project enhancements
	* src/SDCC.y, src/SDCCsymt.h, src/SDCCutil.c, src/SDCCutil.h,
	  src/SDCCval.c: fixed flaws in previous commit
	* src/SDCCsymt.c, src/pic14/glue.c, src/cdbFile.c:
	  fixed printing size_t type numbers

2012-03-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (aopGet, aopPut),
	* src/mcs51/gen.c (aopGet, aopPut): fixed bug 3496842
	* support/regression/tests/sfr16.c: enabled test and fixed for ds390

2012-03-17 Borut Razem <borut.razem AT gmail.com>
