@@ -46,6 +46,21 @@
   typedef unsigned int size_t;
 #endif
 
+/* Bounds-checking interfaces from annex K of the C11 standard. */
+#if defined (__STDC_WANT_LIB_EXT1__) && __STDC_WANT_LIB_EXT1__
+
+#ifndef __RSIZE_T_DEFINED
+#define __RSIZE_T_DEFINED
+typedef size_t rsize_t;
+#endif
+
+#ifndef __ERRNO_T_DEFINED
+#define __ERRNO_T_DEFINED
+typedef int errno_t;
+#endif
+
+#endif
+
 typedef void (*pfn_outputchar)(char c, void* p) _REENTRANT;
 
 extern int _print_format (pfn_outputchar pfn, void* pvoid, const char *format, va_list ap);
